--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1799,108 +1799,107 @@ stories:
   domain: http://www.wausharaargus.com/
   link: https://www.wausharaargus.com/latest-fundraisers/wautoma-area-school-district-donates-over-4000-food-items-christmas-project
 images:
-- name: cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-- name: paris-paris-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
-- name: bordercrossing-bordercrossing-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gan-vogh.jpg
-- name: containership-containership-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-feed-people.jpg
-- name: powerlines-power-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-plentiful.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
-- name: adam-smith-adam-smith-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-dali.jpg
-- name: oldhousecars-house-old-cars-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
-- name: mistywoods-babyfoot-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-dresden.jpg
-- name: bf-skinner-vancouver-waterfront_36556357642_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-vancouver-waterfront_36556357642_o.jpg
-- name: nazi-invasion-satellite-dish-pointing-upwards.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-satellite-dish-pointing-upwards.jpg
-- name: aws-s3-stories-dragon-close-up-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dragon-close-up-yellow-collage.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-three.jpg
-- name: supreme-court-supremecourt-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
-- name: gypsymosaic-gypsy-eyes-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-storm.jpg
-- name: school-clouds-church-clouds-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-graham-sutherland.jpg
-- name: abandonedbuildings_bright_sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_bright_sand.jpg
-- name: file-00-00-18-35 3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
-    3.jpg
-- name: nazi-invasion-small-lighthouse_36556509232_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-small-lighthouse_36556509232_o.jpg
-- name: old-door-lock-old-door-lock-2-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-horiz-circuit.jpg
-- name: oldhouse-granaryfield-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crafty-painting.jpg
-- name: oldsmallboat-oldsmallboat-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
-- name: docks-docks-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
-- name: nazi-invasion-subway-underground_35904617894_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-subway-underground_35904617894_o.jpg
-- name: copper-circuit-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hallway-long-hospital.jpg
-- name: subway-subway-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
-- name: old-door-lock-old-door-lock-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-dresden.jpg
-- name: birdhouse-birdhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
-- name: oldhotel-oldhotel-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-collage.jpg
-- name: copper-circuit-castle-on-the-hill-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-on-the-hill-windows.jpg
-- name: bluelake-crunch-paper-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-01-17-38.jpg
-- name: aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
-- name: store-on-corner-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
-- name: subway-subway-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-green-zuma.jpg
-- name: school-clouds-church-clouds-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
-- name: downtheline-downtheline-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
-- name: berlinwall2-berlinwall-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crunch-paper.jpg
-- name: la-muse-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-adam-smith-edinburgh.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
-- name: la-muse-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
-- name: old-church-oldchurch-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-mucha-mult.jpg
-- name: nazi-invasion-walk-through-garden-tunnel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-walk-through-garden-tunnel.jpg
-- name: old-house-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-dresden.jpg
-- name: stories-gears-numbers-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-numbers-blue.jpg
-- name: ellis-island-ellis-island-room-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-circuit.jpg
-- name: mosaic-face-mosaic-face-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit.jpg
-- name: copper-circuit-washington-monument-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-washington-monument-afar.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-- name: sand-hand-sand-hand-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-kandinsky-bv.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
-- name: dragon-desert-desert-dragon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-emily-carr.jpg
+- name: stalin-time-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_35891228584_o.jpg
+- name: old-house-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colored-circuits.jpg
+- name: yuma-bank-yuma-bak-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
+- name: copper-circuit-statue-playing-instrument.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-playing-instrument.jpg
+- name: nyc-flag-api-conversations-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alien-goggles.jpg
+- name: rockingchair-rockingchair-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-circuit.jpg
+- name: machine-road-machine-road-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
+- name: copper-circuit-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-coming-up-tracks.jpg
+- name: yosemite-yosemite-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-granite.jpg
+- name: ellis-island-ellis-island-room-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-really-hot.jpg
+- name: stalin-time-white-house-west-wing-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-west-wing-view.jpg
+- name: old-granary-field-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
+- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
+- name: bf-skinner-nyc-skyline-from-ferry.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-skyline-from-ferry.jpg
+- name: carry-load-carryload-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-constitution.jpg
+- name: yosemite-yosemite-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-wols.jpg
+- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
+- name: sand-hand-sand-hand-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colorful-blocks.jpg
+- name: yosemite-yosemite-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gan-vogh.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+- name: downtown-los-angeles-downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
+- name: copper-circuit-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-coming-in-on-train.jpg
+- name: la-muse-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-face-eyes-open-statue.jpg
+- name: paris-paris-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-matrix.jpg
+- name: old-church-oldchurch-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+- name: old-granary-field-granaryfield-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
+- name: oldbarn-oldbarn-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
+- name: downtown-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-marcel-duchamp.jpg
+- name: rockingchair-rockingchair-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
+- name: mediterranean-mediterranean-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-hot-spicy.jpg
+- name: nazi-invasion-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fire-truck-pulling-out-of-station.jpg
+- name: trucksilo-trucksilo-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crafty-painting.jpg
+- name: mosaic-face-mosaic-face-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
+- name: braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+- name: school-clouds-church-clouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alien-goggles.jpg
+- name: old-door-lock-old-door-lock-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
+- name: wind-mills-windmills-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alberto-giacometti.jpg
+- name: razorwire-DSC-0080-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
+- name: oldroad-old-road-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+- name: dragon-desert-desert-dragon-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crunch-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+- name: aws-s3-stories-yuma-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yuma-downtown.jpg
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: bf-skinner-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-christ-cross-chalice.jpg
+- name: braceros-domingo-ulloa-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-water-fountain-many-shooting.jpg
+- name: white-house-lawn-white-house-lawn-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-green-zuma.jpg
+- name: stories-server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-cloud1-feed-people.jpg
+- name: old-cabin-oldcabin-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alberto-giacometti.jpg
 ---
 Midwest Vision Partners Announces Partnership With Cleveland Eye Clinic.&nbsp;Trespasser Arrested After Trying To Break Into Cara Delevingne's Home.&nbsp;Paris Hilton Stole 'that's Hot' Catchphrase From Sister Nicky.&nbsp;Junior High Horns Standing Tall.&nbsp;Holiday Luncheon Festive Performance.&nbsp;Washington Post Editor Marty Baron Says Critics Are Distorting 'Merry Impeachmas' Photo.&nbsp;Nevis School Truth In Taxation Hearing Is Monday.&nbsp;Judge Considers Hammond Ranches Grazing Permit.&nbsp;
